<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0FF"
    android:padding="0dp">
    <!-- Back Arrow -->
    <LinearLayout
        android:id="@+id/button_with_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/ImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:padding="0dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/back_arrow"
            />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:layout_marginStart="1dp"
            android:gravity="center_vertical"
            android:text="@string/my_classes"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/info_shape"
        android:layout_below="@id/button_with_text"
        android:layout_marginTop="18dp"
        android:elevation="4dp">

        <!-- Hàng thứ nhất -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Hàng thứ hai -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/text2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lecture"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": "
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Hàng thứ ba -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/text3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of lessons"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=", "
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/text3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/info_container"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <!-- Button 1 -->
        <Button
            android:id="@+id/button_text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="Document"
            android:backgroundTint="#0961F5"
            android:textColor="@android:color/white"/>

        <!-- Button 2 -->
        <Button
            android:id="@+id/button_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="Assignment"
            android:backgroundTint="#FFFFFF"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_classes_container"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@id/container2"
        android:layout_marginTop="20dp"

        android:orientation="vertical">

        <!-- RecyclerView cho list document -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/documentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/back_list_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:backgroundTint="#0961F5"
            android:text="List Classes"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/right_icon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_alignEnd="@id/back_list_class"
            android:layout_alignBottom="@id/back_list_class"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:src="@drawable/next_arrow" />

        <!-- Các phần tử bên trong của bottom layout -->
    </RelativeLayout>
</RelativeLayout>